# delpi-benchmark

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
benchmark/: __init__.py  constant.py  dataset.py  fdp_vs_ids.py  generate_benchmark_reports.py  lfq.py  result_reader.py  temp.py
benchmark/analysis/: id_perf.py  venn_diagram.py
benchmark/figure/: fig1_pmsm.py  venn_diagram.py
benchmark/prep/: prepare_speclib.py
benchmark/proteininfer/: alphadia_params.yaml  msgf_params.yaml  sage_params.yaml
benchmark/tools/: alphadia.py  base.py  delpi.py  diabert.py  diann.py  msgf.py  sage.py
data/: lfq_files.tsv
reports/: 2022-NeatPlasma_result_summary.csv  2023-LFQ-single-run_result_summary.csv  2023-LFQ_result_summary.csv  2024-Mouse-Phospho_result_summary.csv  2025-SCP_result_summary.csv  CPTAC_COAD_result_summary.csv  CPTAC_LUAD_Phospho_result_summary.csv  lfq_absolute_error.tsv  lfq_cv.tsv  lfq_quantifiable_proteins.tsv
