[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delpi-benchmark"
version = "0.1.0"
description = "Reproducible benchmark analysis for DelPi peptide identification study"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Jungkap Park", email = "jungkap.park@bertis.com"}
]
keywords = ["mass spectrometry", "proteomics", "benchmark", "peptide identification", "data analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "polars[numpy,pandas]",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "matplotlib_venn",
    "fastaparser",
    "pyproteininference",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/your-org/delpi-benchmark"
Repository = "https://github.com/your-org/delpi-benchmark"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark*"]
exclude = ["tests*", "temp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | temp
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "temp",
]